@@ -1,14 +1,15 @@
 package ca.bc.gov.nrs.vdyp.batch.controller;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyInt;
 import static org.mockito.Mockito.when;
 
 import java.time.LocalDateTime;
-import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 import java.util.UUID;
 
@@ -101,6 +102,7 @@ class BatchControllerTest {
 		ResponseEntity<Map<String, Object>> response = batchController.health();
 
 		assertEquals(200, response.getStatusCode().value());
+		assertNotNull(response.getBody());
 		assertEquals("UP", response.getBody().get("status"));
 		assertEquals("VDYP Batch Processing Service", response.getBody().get("service"));
 	}
@@ -126,6 +128,7 @@ class BatchControllerTest {
 				.startBatchJobPersistedID(polygonCOMSGUID, layerCOMSGUID, "{}");
 
 		assertEquals(200, response.getStatusCode().value());
+		assertNotNull(response.getBody());
 		assertTrue(response.getBody().containsKey("jobExecutionId"));
 	}
 
@@ -160,6 +163,7 @@ class BatchControllerTest {
 				.startBatchJobWithFiles(polygonFile, layerFile, "{}");
 
 		assertEquals(200, response.getStatusCode().value());
+		assertNotNull(response.getBody());
 		assertTrue(response.getBody().containsKey("jobExecutionId"));
 	}
 
@@ -180,6 +184,7 @@ class BatchControllerTest {
 				.startBatchJobWithFiles(polygonFile, layerFile, "{}");
 
 		assertEquals(400, response.getStatusCode().value());
+		assertNotNull(response.getBody());
 		assertTrue(response.getBody().containsKey("validationMessages"));
 	}
 
@@ -194,6 +199,7 @@ class BatchControllerTest {
 				.startBatchJobWithFiles(polygonFile, layerFile, null);
 
 		assertEquals(400, response.getStatusCode().value());
+		assertNotNull(response.getBody());
 		assertTrue(response.getBody().containsKey("error"));
 	}
 
@@ -210,6 +216,7 @@ class BatchControllerTest {
 				.startBatchJobWithFiles(polygonFile, layerFile, "   ");
 
 		assertEquals(400, response.getStatusCode().value());
+		assertNotNull(response.getBody());
 		assertTrue(response.getBody().containsKey("validationMessages"));
 	}
 
@@ -244,6 +251,7 @@ class BatchControllerTest {
 				.startBatchJobWithFiles(polygonFile, layerFile, "{}");
 
 		assertEquals(200, response.getStatusCode().value());
+		assertNotNull(response.getBody());
 		assertTrue(response.getBody().containsKey("startTime"));
 		assertTrue(response.getBody().containsKey("jobGuid"));
 	}
@@ -255,10 +263,10 @@ class BatchControllerTest {
 		Long executionId = 123L;
 
 		// Mock finding job execution
-		when(jobExplorer.getJobNames()).thenReturn(Arrays.asList("testJob"));
+		when(jobExplorer.getJobNames()).thenReturn(List.of("testJob"));
 		when(jobExplorer.getJobInstanceCount("testJob")).thenReturn(1L);
-		when(jobExplorer.getJobInstances("testJob", 0, 1000)).thenReturn(Arrays.asList(jobInstance));
-		when(jobExplorer.getJobExecutions(jobInstance)).thenReturn(Arrays.asList(jobExecution));
+		when(jobExplorer.getJobInstances("testJob", 0, 1000)).thenReturn(List.of(jobInstance));
+		when(jobExplorer.getJobExecutions(jobInstance)).thenReturn(List.of(jobExecution));
 		when(jobExecution.getJobParameters()).thenReturn(jobParameters);
 		when(jobParameters.getString(BatchConstants.Job.GUID)).thenReturn(jobGuid.toString());
 		when(jobExecution.getId()).thenReturn(executionId);
@@ -269,6 +277,7 @@ class BatchControllerTest {
 		ResponseEntity<Map<String, Object>> response = batchController.stopBatchJob(jobGuid);
 
 		assertEquals(200, response.getStatusCode().value());
+		assertNotNull(response.getBody());
 		assertEquals("STOP_REQUESTED", response.getBody().get(BatchConstants.Job.STATUS));
 		assertEquals(jobGuid, response.getBody().get(BatchConstants.Job.GUID));
 		assertEquals(executionId, response.getBody().get(BatchConstants.Job.EXECUTION_ID));
@@ -281,10 +290,10 @@ class BatchControllerTest {
 		Long executionId = 123L;
 
 		// Mock finding job execution
-		when(jobExplorer.getJobNames()).thenReturn(Arrays.asList("testJob"));
+		when(jobExplorer.getJobNames()).thenReturn(List.of("testJob"));
 		when(jobExplorer.getJobInstanceCount("testJob")).thenReturn(1L);
-		when(jobExplorer.getJobInstances("testJob", 0, 1000)).thenReturn(Arrays.asList(jobInstance));
-		when(jobExplorer.getJobExecutions(jobInstance)).thenReturn(Arrays.asList(jobExecution));
+		when(jobExplorer.getJobInstances("testJob", 0, 1000)).thenReturn(List.of(jobInstance));
+		when(jobExplorer.getJobExecutions(jobInstance)).thenReturn(List.of(jobExecution));
 		when(jobExecution.getJobParameters()).thenReturn(jobParameters);
 		when(jobParameters.getString(BatchConstants.Job.GUID)).thenReturn(jobGuid.toString());
 		when(jobExecution.getId()).thenReturn(executionId);
@@ -295,6 +304,7 @@ class BatchControllerTest {
 		ResponseEntity<Map<String, Object>> response = batchController.stopBatchJob(jobGuid);
 
 		assertEquals(400, response.getStatusCode().value());
+		assertNotNull(response.getBody());
 		assertEquals("STOP_FAILED", response.getBody().get(BatchConstants.Job.STATUS));
 	}
 
@@ -305,10 +315,10 @@ class BatchControllerTest {
 		Long executionId = 123L;
 
 		// Mock finding job execution
-		when(jobExplorer.getJobNames()).thenReturn(Arrays.asList("testJob"));
+		when(jobExplorer.getJobNames()).thenReturn(List.of("testJob"));
 		when(jobExplorer.getJobInstanceCount("testJob")).thenReturn(1L);
-		when(jobExplorer.getJobInstances("testJob", 0, 1000)).thenReturn(Arrays.asList(jobInstance));
-		when(jobExplorer.getJobExecutions(jobInstance)).thenReturn(Arrays.asList(jobExecution));
+		when(jobExplorer.getJobInstances("testJob", 0, 1000)).thenReturn(List.of(jobInstance));
+		when(jobExplorer.getJobExecutions(jobInstance)).thenReturn(List.of(jobExecution));
 		when(jobExecution.getJobParameters()).thenReturn(jobParameters);
 		when(jobParameters.getString(BatchConstants.Job.GUID)).thenReturn(jobGuid.toString());
 		when(jobExecution.getId()).thenReturn(executionId);
@@ -319,6 +329,7 @@ class BatchControllerTest {
 		ResponseEntity<Map<String, Object>> response = batchController.stopBatchJob(jobGuid);
 
 		assertEquals(202, response.getStatusCode().value());
+		assertNotNull(response.getBody());
 		assertEquals("ALREADY_STOPPING", response.getBody().get(BatchConstants.Job.STATUS));
 	}
 
@@ -327,16 +338,17 @@ class BatchControllerTest {
 		UUID jobGuid = UUID.randomUUID();
 
 		// Mock no job found
-		when(jobExplorer.getJobNames()).thenReturn(Arrays.asList("testJob"));
+		when(jobExplorer.getJobNames()).thenReturn(List.of("testJob"));
 		when(jobExplorer.getJobInstanceCount("testJob")).thenReturn(1L);
-		when(jobExplorer.getJobInstances("testJob", 0, 1000)).thenReturn(Arrays.asList(jobInstance));
-		when(jobExplorer.getJobExecutions(jobInstance)).thenReturn(Arrays.asList(jobExecution));
+		when(jobExplorer.getJobInstances("testJob", 0, 1000)).thenReturn(List.of(jobInstance));
+		when(jobExplorer.getJobExecutions(jobInstance)).thenReturn(List.of(jobExecution));
 		when(jobExecution.getJobParameters()).thenReturn(jobParameters);
 		when(jobParameters.getString(BatchConstants.Job.GUID)).thenReturn("different-guid");
 
 		ResponseEntity<Map<String, Object>> response = batchController.stopBatchJob(jobGuid);
 
 		assertEquals(404, response.getStatusCode().value());
+		assertNotNull(response.getBody());
 		assertEquals("Job execution not found", response.getBody().get(BatchConstants.Job.ERROR));
 	}
 
@@ -347,10 +359,10 @@ class BatchControllerTest {
 		Long executionId = 123L;
 
 		// Mock finding job execution
-		when(jobExplorer.getJobNames()).thenReturn(Arrays.asList("testJob"));
+		when(jobExplorer.getJobNames()).thenReturn(List.of("testJob"));
 		when(jobExplorer.getJobInstanceCount("testJob")).thenReturn(1L);
-		when(jobExplorer.getJobInstances("testJob", 0, 1000)).thenReturn(Arrays.asList(jobInstance));
-		when(jobExplorer.getJobExecutions(jobInstance)).thenReturn(Arrays.asList(jobExecution));
+		when(jobExplorer.getJobInstances("testJob", 0, 1000)).thenReturn(List.of(jobInstance));
+		when(jobExplorer.getJobExecutions(jobInstance)).thenReturn(List.of(jobExecution));
 		when(jobExecution.getJobParameters()).thenReturn(jobParameters);
 		when(jobParameters.getString(BatchConstants.Job.GUID)).thenReturn(jobGuid.toString());
 		when(jobExecution.getId()).thenReturn(executionId);
@@ -361,6 +373,7 @@ class BatchControllerTest {
 		ResponseEntity<Map<String, Object>> response = batchController.stopBatchJob(jobGuid);
 
 		assertEquals(500, response.getStatusCode().value());
+		assertNotNull(response.getBody());
 		assertEquals("Failed to stop job execution", response.getBody().get(BatchConstants.Job.ERROR));
 	}
 
@@ -382,17 +395,18 @@ class BatchControllerTest {
 		StepExecution step2 = new StepExecution("workerStep:partition1", realExecution);
 		step1.setStatus(BatchStatus.COMPLETED);
 		step2.setStatus(BatchStatus.STARTED);
-		realExecution.addStepExecutions(Arrays.asList(step1, step2));
+		realExecution.addStepExecutions(List.of(step1, step2));
 
 		// Mock finding job execution
-		when(jobExplorer.getJobNames()).thenReturn(Arrays.asList("testJob"));
+		when(jobExplorer.getJobNames()).thenReturn(List.of("testJob"));
 		when(jobExplorer.getJobInstanceCount("testJob")).thenReturn(1L);
-		when(jobExplorer.getJobInstances("testJob", 0, 1000)).thenReturn(Arrays.asList(realInstance));
-		when(jobExplorer.getJobExecutions(realInstance)).thenReturn(Arrays.asList(realExecution));
+		when(jobExplorer.getJobInstances("testJob", 0, 1000)).thenReturn(List.of(realInstance));
+		when(jobExplorer.getJobExecutions(realInstance)).thenReturn(List.of(realExecution));
 
 		ResponseEntity<Map<String, Object>> response = batchController.getJobStatus(jobGuid);
 
 		assertEquals(200, response.getStatusCode().value());
+		assertNotNull(response.getBody());
 		assertEquals(jobGuid, response.getBody().get(BatchConstants.Job.GUID));
 		assertEquals(executionId, response.getBody().get(BatchConstants.Job.EXECUTION_ID));
 		assertEquals("STARTED", response.getBody().get(BatchConstants.Job.STATUS));
@@ -406,10 +420,10 @@ class BatchControllerTest {
 		UUID jobGuid = UUID.randomUUID();
 		Long executionId = 123L;
 
-		when(jobExplorer.getJobNames()).thenReturn(Arrays.asList("testJob"));
+		when(jobExplorer.getJobNames()).thenReturn(List.of("testJob"));
 		when(jobExplorer.getJobInstanceCount("testJob")).thenReturn(1L);
-		when(jobExplorer.getJobInstances("testJob", 0, 1000)).thenReturn(Arrays.asList(jobInstance));
-		when(jobExplorer.getJobExecutions(jobInstance)).thenReturn(Arrays.asList(jobExecution));
+		when(jobExplorer.getJobInstances("testJob", 0, 1000)).thenReturn(List.of(jobInstance));
+		when(jobExplorer.getJobExecutions(jobInstance)).thenReturn(List.of(jobExecution));
 		when(jobExecution.getJobParameters()).thenReturn(jobParameters);
 		when(jobParameters.getString(BatchConstants.Job.GUID)).thenReturn(jobGuid.toString());
 		when(jobExecution.getId()).thenReturn(executionId);
@@ -423,6 +437,7 @@ class BatchControllerTest {
 		ResponseEntity<Map<String, Object>> response = batchController.getJobStatus(jobGuid);
 
 		assertEquals(200, response.getStatusCode().value());
+		assertNotNull(response.getBody());
 		assertEquals(false, response.getBody().get("isRunning"));
 		assertTrue(response.getBody().containsKey("endTime"));
 	}
@@ -445,17 +460,18 @@ class BatchControllerTest {
 		StepExecution step2 = new StepExecution("workerStep:partition1", realExecution);
 		step1.setStatus(BatchStatus.FAILED);
 		step2.setStatus(BatchStatus.COMPLETED);
-		realExecution.addStepExecutions(Arrays.asList(step1, step2));
+		realExecution.addStepExecutions(List.of(step1, step2));
 
 		// Mock finding job execution
-		when(jobExplorer.getJobNames()).thenReturn(Arrays.asList("testJob"));
+		when(jobExplorer.getJobNames()).thenReturn(List.of("testJob"));
 		when(jobExplorer.getJobInstanceCount("testJob")).thenReturn(1L);
-		when(jobExplorer.getJobInstances("testJob", 0, 1000)).thenReturn(Arrays.asList(realInstance));
-		when(jobExplorer.getJobExecutions(realInstance)).thenReturn(Arrays.asList(realExecution));
+		when(jobExplorer.getJobInstances("testJob", 0, 1000)).thenReturn(List.of(realInstance));
+		when(jobExplorer.getJobExecutions(realInstance)).thenReturn(List.of(realExecution));
 
 		ResponseEntity<Map<String, Object>> response = batchController.getJobStatus(jobGuid);
 
 		assertEquals(200, response.getStatusCode().value());
+		assertNotNull(response.getBody());
 		assertEquals(2L, response.getBody().get("totalPartitions"));
 		assertEquals(2L, response.getBody().get("completedPartitions")); // Both failed and completed count
 	}
@@ -465,16 +481,17 @@ class BatchControllerTest {
 		UUID jobGuid = UUID.randomUUID();
 
 		// Mock no job found
-		when(jobExplorer.getJobNames()).thenReturn(Arrays.asList("testJob"));
+		when(jobExplorer.getJobNames()).thenReturn(List.of("testJob"));
 		when(jobExplorer.getJobInstanceCount("testJob")).thenReturn(1L);
-		when(jobExplorer.getJobInstances("testJob", 0, 1000)).thenReturn(Arrays.asList(jobInstance));
-		when(jobExplorer.getJobExecutions(jobInstance)).thenReturn(Arrays.asList(jobExecution));
+		when(jobExplorer.getJobInstances("testJob", 0, 1000)).thenReturn(List.of(jobInstance));
+		when(jobExplorer.getJobExecutions(jobInstance)).thenReturn(List.of(jobExecution));
 		when(jobExecution.getJobParameters()).thenReturn(jobParameters);
 		when(jobParameters.getString(BatchConstants.Job.GUID)).thenReturn("different-guid");
 
 		ResponseEntity<Map<String, Object>> response = batchController.getJobStatus(jobGuid);
 
 		assertEquals(404, response.getStatusCode().value());
+		assertNotNull(response.getBody());
 		assertEquals("Job execution not found", response.getBody().get(BatchConstants.Job.ERROR));
 	}
 
@@ -488,6 +505,7 @@ class BatchControllerTest {
 		ResponseEntity<Map<String, Object>> response = batchController.getJobStatus(jobGuid);
 
 		assertEquals(500, response.getStatusCode().value());
+		assertNotNull(response.getBody());
 		assertEquals("Failed to get job status", response.getBody().get(BatchConstants.Job.ERROR));
 	}
 
@@ -501,6 +519,7 @@ class BatchControllerTest {
 		ResponseEntity<Map<String, Object>> response = batchController.getJobStatus(jobGuid);
 
 		assertEquals(404, response.getStatusCode().value());
+		assertNotNull(response.getBody());
 		assertEquals("Job execution not found", response.getBody().get(BatchConstants.Job.ERROR));
 	}
 
@@ -524,19 +543,20 @@ class BatchControllerTest {
 		execution2.setStartTime(LocalDateTime.now());
 
 		// Mock finding job execution across multiple instances
-		when(jobExplorer.getJobNames()).thenReturn(Arrays.asList("testJob"));
+		when(jobExplorer.getJobNames()).thenReturn(List.of("testJob"));
 		when(jobExplorer.getJobInstanceCount("testJob")).thenReturn(2L);
-		when(jobExplorer.getJobInstances("testJob", 0, 1000)).thenReturn(Arrays.asList(instance1, instance2));
+		when(jobExplorer.getJobInstances("testJob", 0, 1000)).thenReturn(List.of(instance1, instance2));
 
 		// First instance doesn't have matching GUID
-		when(jobExplorer.getJobExecutions(instance1)).thenReturn(Arrays.asList(execution1));
+		when(jobExplorer.getJobExecutions(instance1)).thenReturn(List.of(execution1));
 
 		// Second instance has matching GUID
-		when(jobExplorer.getJobExecutions(instance2)).thenReturn(Arrays.asList(execution2));
+		when(jobExplorer.getJobExecutions(instance2)).thenReturn(List.of(execution2));
 
 		ResponseEntity<Map<String, Object>> response = batchController.getJobStatus(jobGuid);
 
 		assertEquals(200, response.getStatusCode().value());
+		assertNotNull(response.getBody());
 		assertEquals(jobGuid, response.getBody().get(BatchConstants.Job.GUID));
 		assertEquals(executionId, response.getBody().get(BatchConstants.Job.EXECUTION_ID));
 	}
@@ -554,6 +574,7 @@ class BatchControllerTest {
 				.startBatchJobWithFiles(polygonFile, layerFile, "{}");
 
 		assertEquals(400, response.getStatusCode().value());
+		assertNotNull(response.getBody());
 		assertTrue(response.getBody().containsKey("validationMessages"));
 	}
 
@@ -570,6 +591,7 @@ class BatchControllerTest {
 				.startBatchJobWithFiles(polygonFile, layerFile, "{}");
 
 		assertEquals(400, response.getStatusCode().value());
+		assertNotNull(response.getBody());
 		assertTrue(response.getBody().containsKey("validationMessages"));
 	}
 
@@ -595,6 +617,7 @@ class BatchControllerTest {
 				.startBatchJobWithFiles(polygonFile, layerFile, "{}");
 
 		assertEquals(400, response.getStatusCode().value());
+		assertNotNull(response.getBody());
 		assertTrue(response.getBody().containsKey("validationMessages"));
 	}
 }
